# time2burn

./: .gitignore  Dockerfile  README.md  dune-project  time2burn.opam  time2burn.opam.locked
files/: custom.scss  index.html
scripts/: deploy.sh
src/: app.ml  chart.ml  dune  form.ml  geo.ml  skin_type.ml  spf.ml  weather.ml
src/bootstrap/: basic.ml  dune  icon.ml
